# seed-x-translator

./: .gitignore  data.py  main.py  pyproject.toml  requirements.txt  run.sh
